2010-08-14 (CVS)
- upgraded WebChess license to GPL v3


2004-09-02 (v0.9.0):
- display of captured pieces
- initial stylesheet formatting
- PHP export
- new config setting for board size
- new config setting to restrict the creation of new users
- many, many bug fixes, particularly with check and checkmate detection!!!


2003-10-20 (v0.8.4):
- BUG FIX: fixed a bug in isCheckMate.js where array boundaries weren't being enforced and sometimes caused an invalid index javascript error
- BUG FIX: Checkmate checking fix - by removing king from board isCheckMate() incorrectly believed pieces on the other side of the king could kill the attacking piece, so now king is replaced with ennemy pawn - Bug 753704
- BUG FIX: Fixed bug in validation.js where moving the king along the same line as the attached was not properly validating the move becaues the king was in the way - Bug 750083


2003-05-29 (v0.8.3):
- IMPORTANT: changed name of 'check' column in history table to 'isInCheck' since 'check' is a reserved word in MySQL 4.0
- BUG FIX: fixed case 7 in getNextAttacker() as it was identical to case 6
- BUG FIX: fixed isSafe(): after determining that an attacking king wasn't really a threat because it would be moving into check it would ignore all other possible attackers, which would result in false results under certain circumstances
- BUG FIX: isSafe() sometimes didn't check all the way accross the board (changed i<7 to i<8)
- BUG FIX: fixed a bug in the verbous history settings where pawn promotions wouldn't display what it was promoted to
- BUG FIX: fixed bug whereby check and checkmate weren't properly being detected after a pawn promotion
- BUG FIX: fixed bug where code to update history and theme preferences where inversed (contributed by orcadesign)
- BUG FIX: fixed bug where nick could not be updated (contributed by jdexter)
- IMPORTANT: changed players table to make nick column UNIQUE to prevent users from reusing an existing nick (contributed by Ray Bohac)