@@ -1,6 +1,9 @@
 
 WebChess 1.0.0rc2 (2010-08-14)
+ + minor changes:
+   - user interface appearance changes
+   - watch also other players' games
 
 A PHP Web Application that you can install on your own web server. It allows you to play chess with other users across the internet or sitting at the same screen. It only permits valid moves and can automatically detect check and checkmate status.
 
-http://sourceforge.net/projects/webchess/
+Original website: http://sourceforge.net/projects/webchess/
