@@ -207,13 +207,14 @@ A:link:active, :visited:active {color: green}
 	font-size : 11px;
 }
 
+/* Board colors */
 .move_header  {background-color: #F5F5DC}
-.header_enabled  {background-color: #F5F5DC; text-align: center; font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; color: #888;}
-.header_disabled {background-color: #DDDDDD; text-align: center; font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; color: #888;}
-.light_disabled {background-color: #444444; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
-.dark_disabled {background-color: #BBBBBB; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
-.light_enabled {background-color: #772222; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
-.dark_enabled {background-color: #CCBBBB; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
+.header_enabled  {background-color: #105573; text-align: center; font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; color: #888;}
+.header_disabled {background-color: #105573; text-align: center; font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; color: #888;}
+.light_disabled {background-color: #B5BABD; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
+.dark_disabled {background-color: #DED7DE; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
+.light_enabled {background-color: #ADB6B7; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
+.dark_enabled {background-color: #DDD9DD; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
 .highlighted {background-color: yellow; text-align: center; font-family: Arial, sans-serif; font-weight: bold; color: #888;}
 .nowrap {white-space: nowrap}
 .wm {cursor: pointer;padding: 2px;}
